bundled_metadata/force-app/main/default/objects/AFH_Products__c/AFH_Products__c.object-meta.xml
<CustomObject>
    <label>AFH Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>