bundled_metadata/force-app/main/default/objects/AFH_Products__c/fields/AFH_Brand__c.field-meta.xml
<CustomField>
    <fullName>AFH_Brand__c</fullName>
    <description>Stores the brand associated with the product image. Used to filter and retrieve images by brand.</description>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AFH_Brand</valueSetName>
    </valueSet>
</CustomField>