bundled_metadata/force-app/main/default/objects/AFH_Products__c/fields/AFH_Channel__c.field-meta.xml
<CustomField>
    <fullName>AFH_Channel__c</fullName>
    <description>Stores the channel linked to the product image. Used to categorize and filter images by channel.</description>
    <label>Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AFH_Channel</valueSetName>
    </valueSet>
</CustomField>