bundled_metadata/force-app/main/default/objects/AFH_Products__c/fields/AFH_isGrabBag__c.field-meta.xml
<CustomField>
    <fullName>AFH_isGrabBag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This highlights the grab bag product.</description>
    <label>isGrabBag</label>
    <type>Checkbox</type>
</CustomField>