bundled_metadata/force-app/main/default/objects/AFH_Products__c/listViews/Doritos.listView-meta.xml
<ListView>
    <fullName>Doritos</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AFH_Brand__c</field>
        <operation>equals</operation>
        <value>Doritos</value>
    </filters>
    <label>Doritos</label>
</ListView>