bundled_metadata/force-app/main/default/objects/AFH_Products__c/listViews/Pipers.listView-meta.xml
<ListView>
    <fullName>Pipers</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AFH_Brand__c</field>
        <operation>equals</operation>
        <value>Pipers</value>
    </filters>
    <label>Pipers</label>
</ListView>