bundled_metadata/force-app/main/default/objects/AFH_Products__c/listViews/Quaker.listView-meta.xml
<ListView>
    <fullName>Quaker</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AFH_Brand__c</field>
        <operation>equals</operation>
        <value>Quaker</value>
    </filters>
    <label>Quaker</label>
</ListView>