bundled_metadata/force-app/main/default/objects/AFH_Products__c/listViews/Walkers.listView-meta.xml
<ListView>
    <fullName>Walkers</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AFH_Brand__c</field>
        <operation>equals</operation>
        <value>Walkers</value>
    </filters>
    <label>Walkers</label>
</ListView>